--- a/Elemental-Cuisine/angular.json
+++ b/Elemental-Cuisine/angular.json
@@ -128,7 +128,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -178,10 +180,27 @@
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
-      "styleext": "scss"
+      "styleext": "scss",
+      "spec": false
     },
     "@ionic/angular-toolkit:page": {
-      "styleext": "scss"
+      "styleext": "scss",
+      "spec": false
+    },
+    "@ionic/angular-toolkit:directive": {
+      "spec": false
+    },
+    "@ionic/angular-toolkit:guard": {
+      "spec": false
+    },
+    "@ionic/angular-toolkit:module": {
+      "spec": false
+    },
+    "@ionic/angular-toolkit:pipe": {
+      "spec": false
+    },
+    "@ionic/angular-toolkit:service": {
+      "spec": false
     }
   }
 }
